# TinosaurDemo

./: .gitignore  CMakeLists.txt  README.md  scr.py  your_data_file.txt
include/camera/: camera.h
include/ecs/: ecs.c  ecs.h
include/game/: components.h
include/systems/: camera_system.h  input_system.c  input_system.h  render_system.c  render_system.h
src/: cam_main.c  main.c
src/shaders/: orange_tri.fs
src/utils/: shader_load.c  shader_load.h
